--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,13 @@ button:active {
     margin-top: 20px;
 }
 
-.plant, .ingredient, .cooking {
+.ingredient, .cooking {
     width: 100px;
     cursor: pointer;
     transition: transform 0.2s;
 }
 
-.plant:hover, .ingredient:hover, .cooking:hover {
+.ingredient:hover, .cooking:hover {
     transform: scale(1.1);
 }
 
@@ -161,11 +161,10 @@ button:active {
 /* GARDEN */
 .game-container {
     position: relative;
-    width: 800px;
-    height: 500px;
+    width: 100vw;
+    height: 100vh;
     background-image: url('../assets/Garden.png');
     background-size: cover;
-    border: 2px solid #4caf50;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -180,44 +179,53 @@ button:active {
 
 .plant {
     position: absolute;
-    width: 50px;
-    height: 50px;
-    background-size: cover;
     cursor: grab;
 }
 
 .chili {
-    background-image: url('../assets/chili.png');
-    top: 200px;
+    top: 250px;
     left: 100px;
+    width: 300px;
+    height: 300px;
 }
 
 .turmeric {
-    background-image: url('../assets/turmeric.png');
-    top: 150px;
-    left: 300px;
+    top: 450px;
+    left: 350px;
+    width: 70px;
+    height: 70px;
 }
 
-.cucumber {
-    background-image: url('../assets/cucumber.png');
-    top: 250px;
+.carrot {
+    top: 500px;
     left: 500px;
+    width: 50px;
+    height: 50px;
 }
 
+.plant img {
+    width: 100%;
+    height: 100%;
+}
 
 .basket {
     position: absolute;
-    bottom: 20px;
-    right: 20px;
-    width: 100px;
-    height: 100px;
-    background-color: #8d6e63;
-    border: 2px solid #5d4037; 
+    bottom: 50px;
+    right: 50px;
+    width: 120px; /* Adjust size to match the basket image */
+    height: 120px;
+    background-image: url('../assets/basket.png'); /* Set basket as background */
+    background-size: cover;
+    background-position: center;
     border-radius: 10px;
-    display: flex;
+    display: flex; /* Use flexbox to center items */
     justify-content: center;
     align-items: center;
-    color: white;
-    font-size: 16px;
-    text-align: center;
+    overflow: hidden; /* Prevent items from going outside */
+}
+
+.basket img {
+    max-width: 60px; /* Control size of harvested items */
+    max-height: 60px;
+    position: absolute; /* Allow stacking inside basket */
 }
