--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+* {
+    border: 1px solid red;
+}
 body {
     font-family: Arial, sans-serif;
     text-align: center;
@@ -162,8 +164,8 @@ button:active {
 .game-container {
     position: relative;
     width: 100vw;
-    height: 100vh;
-    background-image: url('../assets/Garden.png');
+    height: 120vh;
+    background-image: url('../assets/Garden_holes.png');
     background-size: cover;
     border-radius: 10px;
     overflow: hidden;
@@ -183,22 +185,22 @@ button:active {
 }
 
 .chili {
-    top: 250px;
-    left: 100px;
+    top: 279px;
+    left: 105px;
     width: 300px;
     height: 300px;
 }
 
 .turmeric {
     top: 450px;
-    left: 350px;
+    left: 500px;
     width: 70px;
     height: 70px;
 }
 
 .carrot {
     top: 500px;
-    left: 500px;
+    left: 700px;
     width: 50px;
     height: 50px;
 }
@@ -228,4 +230,50 @@ button:active {
     max-width: 60px; /* Control size of harvested items */
     max-height: 60px;
     position: absolute; /* Allow stacking inside basket */
+}
+
+
+/* PLANTING */
+#transition-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    z-index: 10;
+}
+
+.planting-spot {
+    width: 60px;
+    height: 60px;
+    border: 2px dashed white;
+    position: absolute;
+}
+
+.turmeric-spot { top: 150px; left: 300px; }
+.carrot-spot { top: 250px; left: 500px; }
+
+.seed { width: 50px; height: 50px; cursor: grab; }
+
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    z-index: 100;
+}
+
+.hidden {
+    display: none;
 }
